src/style/pages/_story.sass
@import '../base/variables'

.period
    font-size: 0.9rem
    font-family: 'MyBodyFont', sans-serif
    margin-top: 0.5rem

.story-content
    margin-bottom: $global-font-size
    a[data-story]
        /* Same color as text to avoid catching the eye on links, this is not a Wikipedia page. */
        color: $body-color
        &::after
            content: ' '
            display: inline-block
            width: 1.3rem
            height: 1rem
            margin-bottom: -0.1rem
            list-style: none
            background-image: url('../icons/book-outline.svg')
            background-size: contain
            background-repeat: no-repeat
            background-position-x: center
    ul li
        margin-top: 1rem
        list-style: none
        &::before
            content: ''
            display: block
            height: 24px
            margin: 1rem
            background-image: url('../icons/bonfire-outline.svg')
            background-size: contain
            background-repeat: no-repeat
            background-position-x: center
            @media (max-width: 1024px)
                height: 16px

section#story
    margin-top: #{$nav-bar-height}
    overflow-y: auto
    height: calc(100vh - #{$nav-bar-height})
    hr
        max-width: 30%
    .map-extra
        margin-top: calc(#{$nav-bar-height} / 4)
        #map
            border-radius: 0 $border-radius-lg 0 $border-radius-lg
            box-shadow: 0 0 3px rgba(114, 114, 114, 0.46)
            .mapboxgl-ctrl-group
                border-radius: 0 $border-radius-lg 0 $border-radius-lg
                button:disabled
                    /* the 'important' is to overwrite the :active */
                    cursor: not-allowed !important
                button:active
                    box-shadow: none
                    .mapboxgl-ctrl-icon
                        filter: $filter-button-background
            .mapboxgl-canvas-container
                opacity: 0
                transition: opacity 0.4s linear
                &.full-opacity
                    opacity: 1
                &:not(.mapboxgl-interactive)
                    cursor: not-allowed
            .mapboxgl-ctrl-scale
                font-family: 'MyBodyFont', sans-serif
                font-size: 0.8rem
            .mapboxgl-ctrl button.mapboxgl-ctrl-my-autopilot .mapboxgl-ctrl-icon,
            .mapboxgl-ctrl button.mapboxgl-ctrl-my-layer .mapboxgl-ctrl-icon
                width: 80% !important
                height: 80% !important
                margin: auto
                &.play-autopilot
                    background-image: url('../icons/map/helicopter.svg')
                &.pause-autopilot
                    background-image: url('../icons/pause-outline.svg')
                &.loading-autopilot
                    background-image: url('../icons/hourglass-outline.svg')
                    animation: hourglass 4s ease infinite
                &.rewind-autopilot
                    background-image: url('../icons/play-back-outline.svg')
                &.faster
                    background-image: url('../icons/map/rabbit.svg')
                &.slower
                    background-image: url('../icons/map/snail.svg')
                &.select-layer
                    background-image: url('../icons/layers.svg')
            .tooltip-inside-map
                font-family: 'MyBoldFont', sans-serif
                font-size: 0.9rem
                .mapboxgl-popup-tip
                    visibility: hidden /* hide unwanted arrow */
                .mapboxgl-popup-content
                    padding: 0.5rem
            width: 100%
            /* the map does not load if too small */
            height: calc(max(60vh - #{$nav-bar-height} - #{$block-space}, 300px))
            background: #eae8e6 /* for the user to know that something will appear (instead of just a big gap) */
        p.attributions
            font-size: 0.8rem
            margin-top: 0.3rem
            line-height: 1.2rem
            text-align: right
    .chart-container
        padding-top: 1rem /* the legend on the bottom adds space that needs to be compensated on the top */
        width: 100%
        height: calc(max(40vh - 1.5 * #{$block-space}, 200px))

